--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-    <title>Crypto Dashboard</title>
+    <title>CryptoLite</title>
   </head>
   <body>
     <div id="root"></div>
